--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,19 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "app.js",
-        "use": "@vercel/node",
-        "config": { "includeFiles": ["dist/**"] }
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.js",
-        "headers": {
-          "Access-Control-Allow-Origin": "https://hms-ufrontedtjaa.vercel.app",
-          "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
-          "Access-Control-Allow-Headers": "Content-Type, Authorization",
-          "Access-Control-Allow-Credentials": "true"
-        }
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [{
+    "src": "app.js",
+    "use": "@vercel/node"
+  }],
+  "routes": [{
+    "src": "/api/(.*)",
+    "dest": "app.js",
+    "headers": {
+      "Access-Control-Allow-Origin": "https://hms-ufrontedtjaa.vercel.app https://hms-udaskboardtja.vercel.app",
+      "Access-Control-Allow-Methods": "GET,POST,PUT,DELETE,OPTIONS",
+      "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With",
+      "Access-Control-Expose-Headers": "Content-Type, Authorization, X-Total-Count",
+      "Access-Control-Allow-Credentials": "true",
+      "Vary": "Origin"
+    }
+  }]
+}
