--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "depd": "^2.0.0",
     "destroy": "^1.2.0",
     "detect-libc": "^2.0.3",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "ee-first": "^1.1.1",
     "emoji-regex": "^8.0.0",
     "encodeurl": "^2.0.0",
@@ -92,6 +92,7 @@
     "negotiator": "^0.6.3",
     "node-addon-api": "^5.1.0",
     "node-fetch": "^2.7.0",
+    "nodemailer": "^6.10.1",
     "nopt": "^5.0.0",
     "npmlog": "^5.0.1",
     "object-assign": "^4.1.1",
